fullstack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstack-ingress
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
  #- ali93frontend.com
  #secretName: secret-tls

  rules:
  - host: ali93frontend.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 8081
